--- a/VerificationCode/src/main/res/layout/digit_layout.xml
+++ b/VerificationCode/src/main/res/layout/digit_layout.xml
@@ -7,7 +7,8 @@
     android:orientation="horizontal"
     android:layout_gravity="center"
     android:gravity="center_horizontal"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:id="@+id/container">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/place1"
