--- a/VerificationCode/src/main/res/layout/digit_layout.xml
+++ b/VerificationCode/src/main/res/layout/digit_layout.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:layout_gravity="center"
     android:gravity="center_horizontal"
     android:baselineAligned="false"
-    android:id="@+id/container">
+    android:id="@+id/container"
+    android:columnCount="6"
+    android:rowCount="1">
 
-</LinearLayout>
+</GridLayout>
